gui layout fixes
Former-commit-id: bd9253c639a4f99cae11b863e5e792aedeb1a7f3

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -137,7 +137,7 @@ newgui arena [
 ]
 
 maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
-maplistsize = 21 //adjust if desired
+maplistsize = 22 //adjust if desired
 mapindex = 0
 maplist = ""
 mapfile = ""
@@ -189,6 +189,9 @@ newgui game [
 	guistayopen [
 		guilist [
 			guilist [
+				guifont "default"; guitext (gamename $modeselected $mutsselected) ""; guifont
+				guilist [ guitext (format "%1selected on " $gray) ""; guifont "default"; guitext $mapcur ""; guifont; ]
+				guistrut 1
 				guilist [
 					guilist [
 						guititle "gamemode"
@@ -211,15 +214,12 @@ newgui game [
 								guibitfield "duel"						mutsselected 0x0008
 								guibitfield "last-man"					mutsselected 0x0010
 							] [ guistrut 2 ]
-						] [ guistrut 6 ]
+						] [ guistrut 5 ]
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
 					guistrut 2
 					guilist [ guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 8 1 "textures/nothumb" ]
 				]
-				guistrut 1
-				guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-				guitext (format "%1selected on map %2%3" $gray $yellow $mapcur) "blank"
 				guistrut 1
 				guilist [
 					guilist [
