lowered spec on trak5, improved gui system some more
Former-commit-id: 3acac2908273074f02c6edbf9ca339dad771eb45

--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -120,7 +120,7 @@ texture s "acord/pmetal1s.jpg"
 texture z "acord/pmetal1z.jpg"
 
 setshader bumpspecmapparallaxglowworld
-setshaderparam "specscale" 1.500000 1.500000 1.500000 0.000000
+setshaderparam "specscale" 0.2500000 0.2500000 0.2500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/light2a.jpg" 0 0 0 0.500000 // 4
 texture n "trak5/light2_n.png"
@@ -128,89 +128,89 @@ texture s "trak5/light2_s.jpg"
 texture g "trak5/light2a_g.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 0.750000 0.750000 0.750000 0.000000
+setshaderparam "specscale" 0.2500000 0.2500000 0.2500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/base1a.jpg" 0 0 0 0.500000 // 5
 texture n "trak5/base1_n.png"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 0.750000 0.750000 0.750000 0.000000
+setshaderparam "specscale" 0.2500000 0.2500000 0.2500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/base1b.jpg" 0 0 0 0.500000 // 6
 texture n "trak5/base1_n.png"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/crate1a.jpg" 0 0 0 0.500000 // 7
 texture n "trak5/crate1_n.png"
 texture s "trak5/crate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/crate1b.jpg" 0 0 0 0.500000 // 8
 texture n "trak5/crate1_n.png"
 texture s "trak5/crate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/crate1c.jpg" 0 0 0 0.500000 // 9
 texture n "trak5/crate1_n.png"
 texture s "trak5/crate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/crate1d.jpg" 0 0 0 0.500000 // 10
 texture n "trak5/crate1_n.png"
 texture s "trak5/crate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/crate1e.jpg" 0 0 0 0.500000 // 11
 texture n "trak5/crate1_n.png"
 texture s "trak5/crate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/graypanel2.jpg" 0 0 0 0.500000 // 12
 texture n "trak5/graypanel2_n.png"
 texture s "trak5/graypanel2_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/ceil1a.jpg" 0 0 0 0.250000 // 13
 texture n "trak5/ceil1_n.png"
 texture s "trak5/ceil1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/light3a.jpg" 0 0 0 0.500000 // 14
 texture n "trak5/light3_n.png"
 texture s "trak5/light3_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/grate1a.jpg" 0 0 0 0.500000 // 15
 texture n "trak5/grate1_n.png"
 texture s "trak5/grate1_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/panel2a.jpg" 0 0 0 0.250000 // 16
 texture n "trak5/panel2_n.png"
 texture s "trak5/panel2_s.jpg"
 
 setshader bumpspecmapparallaxworld
-setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
+setshaderparam "specscale" 0.7500000 0.7500000 0.7500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/holes1b.jpg" 0 0 0 0.500000 // 17
 texture n "trak5/holes1_n.png"
@@ -289,7 +289,7 @@ texture c "<mad:0.75/0.25/0.0125>trak5/base1a.jpg" 0 0 0 0.500000 // 29
 texture n "trak5/base1_n.png"
 
 setshader bumpspecmapparallaxglowworld
-setshaderparam "specscale" 1.500000 1.500000 1.500000 0.000000
+setshaderparam "specscale" 0.500000 0.500000 0.500000 0.000000
 setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
 texture c "trak5/light2a.jpg" 0 0 0 0.250000 // 30
 texture n "trak5/light2_n.png"
