more gui renovations
Former-commit-id: bf54f6ad575703d1eb79a2484db174f81d26e368

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -3,16 +3,51 @@
 bind ESCAPE [if (cleargui 1) [] [showgui main]]    // it all starts here
 
 newgui main [
-	if (= $editing 1) [
-		guibutton	"editing.."			"showgui editing"
+	guilist [
+		guiimage "textures/emblem" [localconnect] 4 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			if (= $editing 1) [
+				guibutton	"editing"			"showgui editing"
+				guistrut 1
+			]
+			guibutton		"quick play" 		"localconnect"
+			guibutton 		"play online"		"showgui servers"
+			guibutton		"start game" 		"showgui game"
+			guistrut 1
+			guibutton		"options"	"showgui options"
+			guibutton		"help"		"showgui help"
+			guibutton		"misc."		"showgui misc"
+			guistrut 1
+			guibutton		"exit"		"quit"	""
+		]
 	]
-	guibutton		"quick play.." 		"localconnect"		"menu"
-	guibutton		"start game.." 		"showgui game"
-	guibutton 		"play online.."		"showgui servers"
-	guibutton		"set options.."		"showgui options"
-	guibutton		"misc. stuff.."		"showgui misc"
-	guibutton		"show help.."		"showgui help"
-	guibutton		"quit"				"quit"				"exit"
+]
+
+newgui loading [
+	guilist [ guistrut 80 ]
+	guilist [
+		guiimage $mapname [] 5 1 "textures/emblem"
+		guistrut 2
+		guilist [
+			guistrut 1
+			guifont "emphasis"
+			if (> (gamemode) 0) [
+				if (strlen $maptitle) [ guitext $maptitle ] [ guitext $mapname ]
+				guifont "default"
+				guitext (gamename (gamemode) (mutators))
+				guifont
+			] [ guitext "please wait" ]
+			guifont
+			guistrut 2
+			guifont "super"
+			guitext (format "%1%%" (+ (*f $progressamt 100) 0))
+			guifont
+		]
+	]
+	guistrut 1
+	guitext $progresstitle
+	if (> (strlen $progresstext) 0) [ guitext (format "%1 [%2]" $progresstext $progresspart) ]
 ]
 
 ircident = 0
@@ -140,7 +175,7 @@ maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfm
 maplistsize = 22 //adjust if desired
 mapindex = 0
 maplist = ""
-mapfile = ""
+mappath = ""
 mapextra = ""
 mapocta = 0
 
@@ -148,7 +183,7 @@ newgui game [
 	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
 		maplist = ""
-		mapfile = ""
+		mappath = ""
 		if (> $modeselected 2) [
 			ms = (* (- $modeselected 3) 2)
 			if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
@@ -156,41 +191,41 @@ newgui game [
 			loop i (listlen $list) [
 				lcurmap = (at $list $i)
 				maplist = (concat $maplist $lcurmap)
-				mapfile = (concat $mapfile (concatword "maps/" $lcurmap))
+				mappath = (concat $mappath (concatword "maps/" $lcurmap))
 			]
 		]
 		l = -1
 		loopfiles lcurmap maps bgz [
 			if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
-				if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
+				if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
-				mapfile = (concat $mapfile (concatword "maps/" $lcurmap))
+				mappath = (concat $mappath (concatword "maps/" $lcurmap))
 			]
 		]
 		if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
 			loopfiles lcurmap base ogz [
-				if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
+				if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
-				mapfile = (concat $mapfile (concatword "base/" $lcurmap))
+				mappath = (concat $mappath (concatword "base/" $lcurmap))
 			]
 		]
-		if (< $l 0) [ maplist = (concat $maplist "?"); mapfile = (concat $mapfile "?"); l = (- (listlen $maplist) 1) ]
+		if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
 		if (!= $showngamegui 1) [
-			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap (mapname)) (strcmp (concatword "maps/" $curmap) (mapname))) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) (mapname))))])
+			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapname) (strcmp (concatword "maps/" $curmap) $mapname)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapname)))])
 		] [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
-		if (< $mapnum 0) [ mapnum = $l; mapextra = (mapname) ]
+		if (< $mapnum 0) [ mapnum = $l; mapextra = $mapname ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
 	]
-	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mapfile $mapnum) ]
+	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
 	guistayopen [
 		guilist [
 			guilist [
-				guifont "default"; guitext (gamename $modeselected $mutsselected) ""; guifont
-				guilist [ guitext (format "%1selected on " $gray) ""; guifont "default"; guitext $mapcur ""; guifont; ]
+				guifont "default"; guitext (gamename $modeselected $mutsselected); guifont
+				guilist [ guitext (format "%1selected on " $gray); guifont "default"; guitext $mapcur; guifont; ]
 				guistrut 1
 				guilist [
 					guilist [
@@ -654,8 +689,8 @@ newgui editing [
     guibutton "set map title/author"               "saycommand [/mapmsg ]"
 
     guitab cfg
-    guitext (format "%1.cfg" (mapname))
-    showfileeditor (format "%1.cfg" (mapname)) -50 12
+    guitext (format "%1.cfg" $mapname)
+    showfileeditor (format "%1.cfg" $mapname) -50 12
 ]
 
 newgui materials [
