firehouse - not detailed yet. PLEASE do not edit/save.
Former-commit-id: d9d1bde6e91d2ceb43d26acbe703f6bf1c2dccd7

--- a/data/maps/firehouse.cfg
+++ b/data/maps/firehouse.cfg
@@ -38,7 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsespeed 50.0
+// impulsespeed 36.0
 // jumpspeed 36.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -459,7 +459,7 @@ texture s "acord/pipes1s.jpg"
 texture z "acord/pipes1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/pipes1c.jpg" 1 0 0 0.250000 // 62
+texture c "acord/pipes1c.jpg" 1 0 0 0.125000 // 62
 texture n "acord/pipes1n.jpg"
 texture s "acord/pipes1s.jpg"
 texture z "acord/pipes1z.jpg"
@@ -1098,7 +1098,7 @@ texture s "acord/nospec.jpg"
 texture z "acord/metal_door3z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/metal_patchy.jpg" 0 0 0 0.500000 // 168
+texture c "<mad:0.6/0.6/0.5>acord/metal_patchy.jpg" 0 0 0 0.500000 // 168
 texture n "acord/metal_patchyn.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/metal_patchyz.jpg"
@@ -1851,7 +1851,7 @@ texture s "acord/tile5s.jpg"
 texture z "acord/tile5z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/vent1c.jpg" 0 0 0 0.500000 // 293
+texture c "<mad:0.3/0.3/0.3>acord/vent1c.jpg" 0 0 0 0.250000 // 293
 texture n "acord/vent1n.jpg"
 texture s "acord/vent1s.jpg"
 texture z "acord/vent1z.jpg"
@@ -4206,7 +4206,7 @@ texture s "acord/window11s.jpg"
 texture z "acord/window11z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/window12c.jpg" 0 0 0 0.500000 // 682
+texture c "<mad:0.5/0.5/0.5>acord/window12c.jpg" 0 0 0 0.500000 // 682
 texture n "acord/window12n.jpg"
 texture s "acord/window12s.jpg"
 texture z "acord/window12z.jpg"
@@ -4222,6 +4222,78 @@ texture c "<mad:0.7/0.8/0.8>acord/wall6.jpg" 1 0 0 0.125000 // 684
 texture n "acord/wall6n.jpg"
 texture s "acord/lowspec.jpg"
 texture z "acord/wall6z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.5/0.6/0.6>acord/junk1c.jpg" 0 0 0 0.500000 // 685
+texture n "acord/junk1n.jpg"
+texture s "acord/junk1s.jpg"
+texture z "acord/junk1z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:1.5/1.5/1.0>acord/window11c.jpg" 0 0 0 0.500000 // 686
+texture n "acord/window11n.jpg"
+texture s "acord/window11s.jpg"
+texture z "acord/window11z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "acord/light1.jpg" 0 0 65 0.500000 // 687
+texture n "acord/light1n.jpg"
+texture s "acord/lowspec.jpg"
+texture z "acord/light1z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "acord/window11c.jpg" 0 0 0 0.250000 // 688
+texture n "acord/window11n.jpg"
+texture s "acord/window11s.jpg"
+texture z "acord/window11z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "acord/window11c.jpg" 0 128 0 0.250000 // 689
+texture n "acord/window11n.jpg"
+texture s "acord/window11s.jpg"
+texture z "acord/window11z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "acord/grate4.png" 0 0 0 0.250000 // 690
+texture n "acord/grate4n.png"
+texture s "acord/grate4s.png"
+texture z "acord/grate4z.png"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.5/0.4/0.3>acord/concrete_brushed.jpg" 0 0 0 0.500000 // 691
+texture n "acord/concrete_brushedn.jpg"
+texture s "acord/nospec.jpg"
+texture z "acord/concrete_brushedz.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.5/0.5/0.5>acord/window12c.jpg" 0 128 128 0.500000 // 692
+texture n "acord/window12n.jpg"
+texture s "acord/window12s.jpg"
+texture z "acord/window12z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.5/0.6/0.6>acord/wall6.jpg" 1 0 0 0.125000 // 693
+texture n "acord/wall6n.jpg"
+texture s "acord/lowspec.jpg"
+texture z "acord/wall6z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:1.6/1.6/1>acord/window8c.jpg" 0 0 0 0.500000 // 694
+texture n "acord/window8n.jpg"
+texture s "acord/window8s.jpg"
+texture z "acord/window8z.jpg"
+
+setshader bumpenvspecmapparallaxworld
+texture c "<mad:1.5/1.5/0.8>acord/window3.jpg" 0 0 0 0.500000 // 695
+texture n "acord/window3n.jpg"
+texture s "acord/window3s.jpg"
+texture z "acord/window3z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:1/1/0.5>acord/window12c.jpg" 0 0 0 0.500000 // 696
+texture n "acord/window12n.jpg"
+texture s "acord/window12s.jpg"
+texture z "acord/window12z.jpg"
 
 mmodel "acord/acbush0"
 mmodel "acord/acbush1"
