--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -57,7 +57,7 @@ lms					= [ start $arg1 4 0x0010 ]; mapcomplete lms
 lmsarena			= [ start $arg1 4 0x0030 ]; mapcomplete lmsarena
 instalms			= [ start $arg1 4 0x0014 ]; mapcomplete instalms
 
-toggleedit			= [ if (= (gamemode) 2) [ edittoggle ] [ edit (mapname) ] ] 
+toggleedit			= [ if (= (gamemode) 2) [ edittoggle ] [ edit $mapname ] ] 
 
 delta_game_0 		= [ if (iszooming) [ setzoom $arg1 ] [ weapon -1 $arg1 ] ]; setcomplete delta_game_0 off
 
