--- a/data/map.cfg
+++ b/data/map.cfg
@@ -58,6 +58,8 @@ texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 exec "acord/package.cfg"
 exec "trak4/package.cfg"
 exec "trak5/package.cfg"
+exec "trak6/package.cfg"
+exec "trak7/package.cfg"
 
 exec "mitaman/package.cfg"
 exec "luckystrike/package.cfg"
