--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -33,21 +33,26 @@ newgui loading [
 			guistrut 1
 			guifont "emphasis"
 			if (> (gamemode) 0) [
-				if (strlen $maptitle) [ guitext $maptitle ] [ guitext $mapname ]
+				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "please wait" ]
 				guifont "default"
 				guitext (gamename (gamemode) (mutators))
 				guifont
 			] [ guitext "please wait" ]
 			guifont
 			guistrut 2
-			guifont "super"
-			guitext (format "%1%%" (+ (*f $progressamt 100) 0))
-			guifont
+			guilist [
+				guistrut 2
+				guifont "sub"
+				guiprogress $progressamt 160
+				guifont
+			]
 		]
 	]
 	guistrut 1
-	guitext $progresstitle
-	if (> (strlen $progresstext) 0) [ guitext (format "%1 [%2]" $progresstext $progresspart) ]
+	guilist [
+		guitext $progresstitle
+		if (> (strlen $progresstext) 0) [ guistrut 1; guitext (format "%1 [%2%%]" $progresstext (+ (*f $progresspart 100) 0)) ]
+	]
 ]
 
 ircident = 0
