split maptitle/mapauthor variables
Former-commit-id: 8bc4d41de32be51e1d98a36540dd847487e4c321

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -31,10 +31,13 @@ newgui loading [
 		guistrut 2
 		guilist [
 			guistrut 1
-			guifont "emphasis"
+			guifont "super"
 			if (> (gamemode) 0) [
 				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "please wait" ]
 				guifont "default"
+				if (strlen $mapauthor) [ guilist [ guistrut 4; guitext (format "by %1" $mapauthor) ] ] [ guistrut 1 ]
+				guifont
+				guifont "sub"
 				guitext (gamename (gamemode) (mutators))
 				guifont
 			] [ guitext "please wait" ]
