penultimate version of firehouse
Former-commit-id: 92913f36da4d8ab229f9973f1291003ab89c0c4c

--- a/data/maps/firehouse.cfg
+++ b/data/maps/firehouse.cfg
@@ -33,10 +33,10 @@
 // floorz 0.867
 // fog 600
 // fogcolour 0x202020
-// grassanimmillis 3000
-// grassanimscale 0.03
-// grassheight 4
-// grassscale 2
+// grassanimmillis 10000
+// grassanimscale 0.2
+// grassheight 12
+// grassscale 3
 // gravity 50.0
 // impulsespeed 36.0
 // jumpspeed 36.0
@@ -1621,6 +1621,8 @@ texture c "<mad:0.7/0.6/0.7>acord/grass1.jpg" 1 0 0 0.500000 // 254
 texture n "acord/grass1n.jpg"
 texture s "acord/grass1s.jpg"
 texture z "acord/grass1z.jpg"
+texlayer 280
+autograss "acord/agrass1.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/techt1.jpg" 0 0 0 0.500000 // 255
@@ -1773,7 +1775,7 @@ texture s "acord/concrete5s.jpg"
 texture z "acord/concrete5z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/earth4c.jpg" 0 0 0 0.500000 // 280
+texture c "<mad:0.4/0.5/0.5>acord/earth4c.jpg" 0 0 0 0.500000 // 280
 texture n "acord/earth4n.jpg"
 texture s "acord/earth4s.jpg"
 texture z "acord/earth4z.jpg"
@@ -4162,6 +4164,7 @@ texture c "<mad:0.3/0.3/0.3>acord/concrete2.jpg" 0 0 0 0.500000 // 674
 texture n "acord/concrete2n.jpg"
 texture s "acord/nospec.jpg"
 texture z "acord/concrete2z.jpg"
+texlayer 697
 
 setshader bumpspecmapparallaxworld
 texture c "acord/window8c.jpg" 0 0 0 0.500000 // 675
@@ -4294,6 +4297,14 @@ texture c "<mad:1/1/0.5>acord/window12c.jpg" 0 0 0 0.500000 // 696
 texture n "acord/window12n.jpg"
 texture s "acord/window12s.jpg"
 texture z "acord/window12z.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.2/0.2/0.2>acord/earth5c.jpg" 1 0 0 0.500000 // 697
+texture n "acord/earth5n.jpg"
+texture s "acord/earth5s.jpg"
+texture z "acord/earth5z.jpg"
+texlayer 674
+autograss "acord/agrass1.png"
 
 mmodel "acord/acbush0"
 mmodel "acord/acbush1"
