more (progress) ui enhancements
Former-commit-id: 476456cb5a6af43b9d98e74dbfa4b5875ac07b3b

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -4,7 +4,7 @@ bind ESCAPE [if (cleargui 1) [] [showgui main]]    // it all starts here
 
 newgui main [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 4 1 "textures/nothumb"
+		guiimage "textures/emblem" [localconnect] 6 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			if (= $editing 1) [
@@ -25,9 +25,8 @@ newgui main [
 ]
 
 newgui loading [
-	guilist [ guistrut 80 ]
 	guilist [
-		guiimage $mapname [] 5 1 "textures/emblem"
+		guiimage "" [] 6 1
 		guistrut 2
 		guilist [
 			guistrut 1
@@ -35,7 +34,7 @@ newgui loading [
 			if (> (gamemode) 0) [
 				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "please wait" ]
 				guifont "default"
-				if (strlen $mapauthor) [ guilist [ guistrut 4; guitext (format "by %1" $mapauthor) ] ] [ guistrut 1 ]
+				if (strlen $mapauthor) [ guilist [ guistrut 3; guitext (format "by %1" $mapauthor) ] ] [ guistrut 1 ]
 				guifont
 				guifont "sub"
 				guitext (gamename (gamemode) (mutators))
@@ -44,17 +43,12 @@ newgui loading [
 			guifont
 			guistrut 2
 			guilist [
-				guistrut 2
+				guistrut 4
 				guifont "sub"
 				guiprogress $progressamt 160
 				guifont
 			]
 		]
-	]
-	guistrut 1
-	guilist [
-		guitext $progresstitle
-		if (> (strlen $progresstext) 0) [ guistrut 1; guitext (format "%1 [%2%%]" $progresstext (+ (*f $progresspart 100) 0)) ]
 	]
 ]
 
