--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -7,6 +7,7 @@ newgui main [
 		guiimage "textures/emblem" [localconnect] 6 1 "textures/nothumb"
 		guistrut 2
 		guilist [
+			guistrut 1
 			if (= $editing 1) [
 				guibutton	"editing"			"showgui editing"
 				guistrut 1
