--- a/data/models/acord/package.cfg
+++ b/data/models/acord/package.cfg
@@ -54,3 +54,8 @@ mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
 mmodel "acord/ptest"
+mmodel "acord/weed1"
+mmodel "acord/blood2"
+mmodel "acord/blood3"
+mmodel "acord/blood4"
+mmodel "acord/blood5"
