--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -2,11 +2,25 @@
 
 bind ESCAPE [if (cleargui 1) [] [showgui main]]    // it all starts here
 
+textlogo = [
+	guifont "super"
+	guitext "^faBlood Frontier"
+	guifont
+	guilist [
+		guistrut 5
+		guifont "sub"
+		guitext "^fdIt's Bloody Fun!"
+		guifont
+	]
+]
+
 newgui main [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 6 1 "textures/nothumb"
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
+			guistrut 1
+			textlogo
 			guistrut 1
 			if (= $editing 1) [
 				guibutton	"editing"			"showgui editing"
@@ -20,16 +34,18 @@ newgui main [
 			guibutton		"help"		"showgui help"
 			guibutton		"misc."		"showgui misc"
 			guistrut 1
-			guibutton		"exit"		"quit"	""
+			guibutton		"quit"		"quit"	""
 		]
 	]
 ]
 
 newgui loading [
 	guilist [
-		guiimage "" [] 6 1
+		guiimage "" [] 8 1
 		guistrut 2
 		guilist [
+			guistrut 1
+			textlogo
 			guistrut 1
 			guifont "super"
 			if (> (gamemode) 0) [
@@ -44,9 +60,9 @@ newgui loading [
 			guifont
 			guistrut 2
 			guilist [
-				guistrut 4
+				guistrut 32
 				guifont "sub"
-				guiprogress $progressamt 160
+				guiprogress $progressamt 256
 				guifont
 			]
 		]
@@ -256,7 +272,7 @@ newgui game [
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
 					guistrut 2
-					guilist [ guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 6 1 "textures/nothumb" ]
+					guilist [ guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 8 1 "textures/nothumb" ]
 				]
 				guistrut 1
 				guilist [
