cleanups and placeholders
Former-commit-id: 7f8f90e67f4837e34a7616c66e5dd996880f503b

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -19,7 +19,6 @@ newgui main [
 		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
-			guistrut 1
 			textlogo
 			guistrut 1
 			if (= $editing 1) [
@@ -44,7 +43,6 @@ newgui loading [
 		guiimage "" [] 8 1
 		guistrut 2
 		guilist [
-			guistrut 1
 			textlogo
 			guistrut 1
 			guifont "super"
@@ -121,17 +119,37 @@ newgui irc [
 ]
 
 newgui misc [
-	guibutton "irc client" "showgui irc"
+	guilist [
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			textlogo
+			guistrut 1
+			guibutton "irc client" "showgui irc"
+		]
+	]
 ]
 
 newgui about [
-	guitext "Blood Frontier (C) 2006-2009"
-	guitext [Anthony Cord and Quinton Reeves]
-	guitext "http://bloodfrontier.com/"
-	guibar
-	guitext "Based on Cube Engine 2 (C) 2001-2009"
-    guitext [by Wouter "Aardappel" van Oortmerssen, Lee "Eihrul" Salzman]
-    guitext "http://sauerbraten.org/"
+	guilist [
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			textlogo
+			guistrut 1
+			guifont "emphasis"
+			guitext "(C) 2006-2009"
+			guifont
+			guifont "default"
+			guitext [Anthony Cord and Quinton Reeves]
+			guifont
+			guitext "http://bloodfrontier.com/"
+			guistrut 1
+			guitext "Based on Cube Engine 2 (C) 2001-2009"
+			guitext [by Wouter "Aardappel" van Oortmerssen, Lee "Eihrul" Salzman]
+			guitext "http://sauerbraten.org/"
+		]
+	]
 ]
 
 newgui support [
@@ -142,8 +160,16 @@ newgui support [
 ]
 
 newgui help [
-	guibutton "about blood frontier" "showgui about"
-	guibutton "get online support" "showgui support"
+	guilist [
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			textlogo
+			guistrut 1
+			guibutton "about blood frontier" "showgui about"
+			guibutton "get online support" "showgui support"
+		]
+	]
 ]
 
 showngamegui = 0
@@ -161,32 +187,48 @@ varfld = [
 ]
 
 newgui name [
-	guitext (format "Welcome to %1Blood Frontier" $red)
-	guistrut 1
-	guititle "Please enter your name"
-	guistrut 1
 	guilist [
-		nameval = (getname)
-		guifield nameval 20 [name $nameval]
-		guistrut 1
-		guibutton (format "%1ok" $green) [cleargui 1] "action"
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			textlogo
+			guistrut 1
+			guititle "Welcome"
+			guistrut 1
+			guititle "Please enter your name"
+			guistrut 1
+			guilist [
+				nameval = (getname)
+				guifield nameval 20 [name $nameval]
+				guistrut 1
+				guibutton (format "%1ok" $green) [cleargui 1] "action"
+			]
+		]
 	]
 ]
 
 wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade"] //make them all the same size
 
 newgui arena [
-	if (& (mutators) 0x0080) [
-		guititle "select weapon"
-		guibutton "^fwrandom" [arenaweap 0] "action"
-		guibutton "^fyshotgun" [arenaweap 1] "shotgun"
-		guibutton "^fosmg" [arenaweap 2] "smg"
-		guibutton "^frflamer" [arenaweap 3] "flamer"
-		guibutton "^fcplasma" [arenaweap 4] "plasma"
-		guibutton "^fvrifle" [arenaweap 5] "rifle"
-	] [
-		guitext "^frsorry, this is only available in arena"
-		guibutton "^fgok" [cleargui 1] "action"
+	guilist [
+		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guistrut 2
+		guilist [
+			textlogo
+			guistrut 1
+			if (& (mutators) 0x0080) [
+				guititle "select weapon"
+				guibutton "^fwrandom" [arenaweap 0] "action"
+				guibutton "^fyshotgun" [arenaweap 1] "shotgun"
+				guibutton "^fosmg" [arenaweap 2] "smg"
+				guibutton "^frflamer" [arenaweap 3] "flamer"
+				guibutton "^fcplasma" [arenaweap 4] "plasma"
+				guibutton "^fvrifle" [arenaweap 5] "rifle"
+			] [
+				guitext "^frsorry, this is only available in arena"
+				guibutton "^fgok" [cleargui 1] "action"
+			]
+		]
 	]
 ]
 
@@ -297,12 +339,13 @@ newgui game [
 			guistrut 2
 			guilist [
 				guilist [ 
-					guistrut 6
-					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "conopen" 
-					guistrut 2
-					guibutton (format "%1close" $red) [cleargui 1] "exit" 
+					guistrut 7
+					guiimage "textures/conopen" 1 (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) 
+					guistrut 1
+					guifont "super"
+					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
+					guifont
 				] 
-				guistrut 1
 				guilist [
 					nummaps = (listlen $maplist)
 					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
@@ -1328,14 +1371,3 @@ newgui mapmodels [
 	mapmodelnum = (mapmodelindex)
 	guilistloop 4 2 $mapmodelnum [ showmapmodel $i ]
 ]
-
-newgui seltexinfo [
-    guitext (concatword "Slot: " (getseltex))
-    guilist [ loop x 5 [ 
-        texname = (gettexname (getseltex) $x)
-        texname = (substr $texname (+ (strstr $texname ">") 1)) // chop off any leading commands
-        guiimage (concatword "packages/" $texname) "" 1 1
-    ] ]
-    loop x 5 [ tex = (gettexname (getseltex) $x)); if (strcmp $tex "") [] [guitext $tex]]
-]
-texinfo = [ showgui seltexinfo ]
