move texture/model/sound package loading to package.cfg
Former-commit-id: bdd27cc8e1fe40243fadaa8e35aae6999ac28702

--- a/data/map.cfg
+++ b/data/map.cfg
@@ -55,15 +55,4 @@ texture n "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-exec "acord/package.cfg"
-exec "trak4/package.cfg"
-exec "trak5/package.cfg"
-exec "trak6/package.cfg"
-exec "trak7/package.cfg"
-
-exec "mitaman/package.cfg"
-exec "luckystrike/package.cfg"
-exec "kurt/package.cfg"
-
-exec "models/acord/package.cfg"
-exec "sounds/ambience/package.cfg"
+exec "package.cfg"
