added firehouse to rotation, fixed some titles
Former-commit-id: 9e1b250d2387c89423344e53b756c8b550c61af3

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -53,7 +53,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Bath by LuckyStrike-Rx"
+maptitle "Bath by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
