--- a/data/maps/firehouse.cfg
+++ b/data/maps/firehouse.cfg
@@ -53,9 +53,9 @@
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
-// mapauthor ""
+mapauthor "Anthony Cord"
 // mapmusic ""
-// maptitle ""
+maptitle "Firehouse"
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
