--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -55,7 +55,7 @@
 // lmshadows 1
 // mapauthor "LuckyStrike-Rx"
 // mapmusic ""
-// maptitle "Forge"
+maptitle "Forge"
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
