--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Gladiator by Anthony Cord"
+maptitle "Gladiator by Anthony Cord"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
