--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 1.0
 // lmshadows 1
 // mapmusic ""
-// maptitle "Hollow by Jonathan 'W!CK3D' Roels"
+maptitle "Hollow by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
 movespeed 45.0
