--- a/data/maps/longestyard.cfg
+++ b/data/maps/longestyard.cfg
@@ -54,7 +54,7 @@ impulsespeed 50.0
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "The Longest Yard (Q3DM17) by Viruz"
+maptitle "The Longest Yard (Q3DM17) by Viruz"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
