--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -46,7 +46,7 @@ impulsegravity 60
 // lightprecision 64
 numplayers 4
 // adaptivesample 1
-// maptitle [Private Stan Sauer in: THE SERIOUSLY BIG VALLEY by MitaMAN]
+maptitle [Private Stan Sauer in: THE SERIOUSLY BIG VALLEY by MitaMAN]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
