--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidscale 0.9
 // lmshadows 1
 // mapmusic ""
-// maptitle "Flak Panic by Derek 'Favorito' Ponicki"
+maptitle "Flak Panic by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
 movespeed 50
