--- a/data/maps/storage.cfg
+++ b/data/maps/storage.cfg
@@ -6,7 +6,7 @@ jumpspeed 50.0
 impulsespeed 50
 impulsemod 60.0
 numplayers 10
-maptitle "Storage Facility by Tony Cord"
+maptitle "Storage Facility by Anthony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
 texture 1 "textures/waterfall.jpg"
