--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -54,7 +54,7 @@
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Tower by Quinton Reeves"
+maptitle "Tower by Quinton Reeves"
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
