--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -51,7 +51,7 @@ impulsespeed 50
 // liquidscale 0.9
 // lmshadows 1
 // mapmusic ""
-// maptitle ""
+maptitle ""
 // mmshadows 2
 // mmskylight 1
 movespeed 50
