--- a/data/maps/wishbone.cfg
+++ b/data/maps/wishbone.cfg
@@ -54,7 +54,7 @@
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle ""
+maptitle ""
 // mmshadows 0
 // mmskylight 1
 // movespeed 40.0
