--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -47,14 +47,14 @@ newgui loading [
 			guistrut 1
 			guifont "super"
 			if (> (gamemode) 0) [
-				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "please wait" ]
+				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "Please Wait" ]
 				guifont "default"
-				if (strlen $mapauthor) [ guilist [ guistrut 3; guitext (format "by %1" $mapauthor) ] ] [ guistrut 1 ]
+				if (strlen $mapauthor) [ guilist [ guistrut 3; guitext (format "by %1" $mapauthor) ] ] [ guistrut 2 ]
 				guifont
 				guifont "sub"
 				guitext (gamename (gamemode) (mutators))
 				guifont
-			] [ guitext "please wait" ]
+			] [ guitext "Please Wait"; guistrut 3 ]
 			guifont
 			guistrut 2
 			guilist [
