--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Delicatessen by LuckyStrike-Rx"
+maptitle "Delicatessen by LuckyStrike-Rx"
 // mmshadows 1
 // mmskylight 1
 movespeed 50.0
