--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "DualStar by Jonathan 'W!CK3D' Roels"
+maptitle "DualStar by Jonathan 'W!CK3D' Roels"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
