--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Smouldering by Kurt Kessler"
+maptitle "Smouldering by Kurt Kessler"
 // mmshadows 1
 // mmskylight 1
 movespeed 50.0
