--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Tranquility by Derek 'Favorito' Ponicki"
+maptitle "Tranquility by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
