--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -56,7 +56,7 @@ impulsespeed 50
 // liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
-// maptitle "Venus by LuckyStrike-Rx"
+maptitle "Venus by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
 movespeed 50.0
