some octa-import fixes
Former-commit-id: 596d818a3daa7ea5fa005cbdbfa619bd06d5069a

--- a/data/octa.cfg
+++ b/data/octa.cfg
@@ -1,5 +1,7 @@
 // Blood Frontier: OCTA Map Import Settings
 
+playasong = []
+
 texture	water	"textures/water.jpg"					//	water surface
 texture	1		"textures/waterfall.jpg"				//	waterfall
 texture	1		"textures/watern.jpg"					//	water normals
