remixed nova, tweaked progress and texgui a bit more
Former-commit-id: 3414454efbc08e3447e1105c268ad0ef92e6d733

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -59,7 +59,7 @@ newgui loading [
 			guistrut 2
 			guilist [
 				guistrut 32
-				guifont "sub"
+				guifont "default"
 				guiprogress $progressamt 256
 				guifont
 			]
