fix action for some guiimages
Former-commit-id: 3eebb70f299e6c55b3f4ff40313c6bf621f571fd

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -120,7 +120,7 @@ newgui irc [
 
 newgui misc [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guiimage "textures/emblem" [] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			textlogo
@@ -132,7 +132,7 @@ newgui misc [
 
 newgui about [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guiimage "textures/emblem" [] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			textlogo
@@ -161,7 +161,7 @@ newgui support [
 
 newgui help [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guiimage "textures/emblem" [] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			textlogo
@@ -188,7 +188,7 @@ varfld = [
 
 newgui name [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guiimage "textures/emblem" [] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			textlogo
@@ -211,7 +211,7 @@ wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" "
 
 newgui arena [
 	guilist [
-		guiimage "textures/emblem" [localconnect] 8 1 "textures/nothumb"
+		guiimage "textures/emblem" [] 8 1 "textures/nothumb"
 		guistrut 2
 		guilist [
 			textlogo
@@ -314,7 +314,7 @@ newgui game [
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
 					guistrut 2
-					guilist [ guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 8 1 "textures/nothumb" ]
+					guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
 				]
 				guistrut 1
 				guilist [
@@ -340,7 +340,7 @@ newgui game [
 			guilist [
 				guilist [ 
 					guistrut 7
-					guiimage "textures/conopen" 1 (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) 
+					guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
 					guistrut 1
 					guifont "super"
 					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
