some blendmap touches
Former-commit-id: 79103a607d58c84a58b6cc33a54a84cd552af4ff

--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -35,7 +35,7 @@
 // fogcolour 0xBD7408
 // grassanimmillis 3000
 // grassanimscale 0.03
-// grassheight 4
+// grassheight 6
 // grassscale 2
 // gravity 50.0
 // impulsespeed 50.0
@@ -1580,6 +1580,7 @@ setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
 texture c "mitaman/mm-grassdead42.jpg" 1 0 0 0.750000 // 249
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
+texlayer 165
 autograss "<mad:1.2/1/1>luckystrike/grass_lucky_green.png"
 
 setshader bumpspecmapworld
