some texturing/lighting fixes
Former-commit-id: 02a5beec6cc5cc2ea24d3fe762d030197cce0d21

--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -3040,9 +3040,9 @@ texture s "acord/wall9s.jpg"
 texture z "acord/wall9z.jpg"
 
 setshader bumpspecmapworld
-texture c "acord/floor6.jpg" 0 0 0 0.500000 // 492
+texture c "acord/floor6.jpg" 0 0 0 0.250000 // 492
 texture n "acord/floor6n.jpg"
-texture s "acord/floor6s.jpg"
+texture s "<mad:0.25/0.25/0.25>acord/floor6s.jpg"
 texture z "acord/floor6z.jpg"
 
 setshader bumpspecmapworld
