more remix cleanups
Former-commit-id: db11501bfafdb17044bd840b67ca3e36bd3643ef

--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -3431,7 +3431,7 @@ texture n "trak4/kitchen_nm.png"
 texture s "trak4/kitchen_s.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.3/0.3/0.3>trak4/painted2.jpg" 0 0 0 1.000000 // 562
+texture c "<mad:0.45/0.45/0.45>trak4/painted2.jpg" 0 0 0 1.000000 // 562
 texture n "trak4/painted2_nm.png"
 texture s "trak4/painted2_s.jpg"
 
@@ -3471,7 +3471,7 @@ texture n "trak4/paint_nm.png"
 texture s "trak4/paint_s.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "trak4/plaster1.jpg" 0 0 0 0.500000 // 570
+texture c "<mad:0.75/0.75/0.75>trak4/plaster1.jpg" 0 0 0 0.500000 // 570
 texture n "trak4/plaster1_nm.png"
 texture s "trak4/plaster1_s.jpg"
 
@@ -5947,6 +5947,16 @@ setshader bumpspecmapparallaxworld
 texture c "trak4/trim1b.jpg" 1 0 196 1.000000 // 987
 texture n "trak4/trim1_nm.png"
 texture s "trak4/trim1_s.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "trak4/trim1e.jpg" 1 0 0 0.500000 // 988
+texture n "trak4/trim1_nm.png"
+texture s "trak4/trim1_s.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.45/0.45/0.45>trak4/plaster1.jpg" 0 0 0 0.500000 // 989
+texture n "trak4/plaster1_nm.png"
+texture s "trak4/plaster1_s.jpg"
 
 mmodel "acord/acbush0"
 mmodel "acord/acbush1"
